# portfolio

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  Cargo.toml  Dockerfile  README.md  astro.config.mjs  fly.toml  go.mod  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  fly-deploy.yml  fmt.yml  prettier.yml
api/: contact.go
assets/: scripts.js  styles.css
components/: Contact.tsx  ExperienceCard.tsx  ProjectCard.tsx  navbar.tsx  theme-switch.tsx
config/: site.ts
content/: experiences.ts  projects.ts
functions/: [[path]].js  contact.ts
layouts/: default.tsx
pages/: _document.tsx  index.tsx
public/: index.html
src/: App.tsx  bomb.rs  components.rs  global.css  home.rs  index.css  index.tsx  main.rs  main.tsx  styles.css
src/assets/: content.tsx  experiences.ts  links.ts
src/components/: Alert.tsx  AnimatedUnderline.tsx  ContactForm.svelte  ContactMe.tsx  CopyToClipboard.tsx  Image.tsx  Input.tsx  ProjectCard.tsx  Projects.tsx  Section.tsx  SlideIn.tsx  SocialLinks.tsx  TextInput.tsx  about.astro  card.astro  contact.astro  experience.astro  index.ts  nav.svelte  projects.astro  section.astro
src/config/: routes.ts
src/features/: index.ts
src/hooks/: index.ts  useAlert.ts  useAutoHide.ts  useContactMe.ts  useRedirect.ts  useTheme.ts  useToggle.ts
src/layout/: AnimatedPage.tsx  FadeIn.tsx  SlideIn.tsx  html.astro  index.ts  layout.astro
src/lib/: links.ts  scrollToID.ts
(+94 files in other folders)
